--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>
-  Champions League 2017/18
-</title>
-</html>
+<head>
+  <title>
+    Champions League 2017/18
+  </title>
+</head>  
+
+  
+  
+  </html>
