--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>
-    Champions League 2017/18
-  </title>
-</head>  
-
-  
-  
-  </html>
+  <head>
+    <title>
+      Champions League 2017/18
+    </title>
+  </head>
+  <body>
+    <strong>Champions League 2017/18</strong>
+  </body>
+</html>
