--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </title>
   </head>
   <body>
-    <h1>Champions League 2017/18</h1>
+    <h1><strong>Champions League 2017/18</strong></h1>
   </body>
 </html>
