--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>
-                                                           Champions League 2017/18
+      Champions League 
     </title>
   </head>
   <body>
-    <h1><strong>Champions League 2017/18</strong></h1>
+    <h1><strong>Champions League</strong></h1>
     <p>
   </body>
 </html>
