--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1><strong>Champions League</strong></h1>
+    <p>Die UEFA Champions League ist ein Wettbewerb für europäische Fußball-Vereinsmannschaften der Herren. 
+       Ausgetragen wird sie, wie die UEFA Europa League, unter dem Dach des Europäischen Fußballverbandes UEFA.
+    </p>  
   </body>
 </html>
