--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Die UEFA Champions League ist ein Wettbewerb für europäische Fußball-Vereinsmannschaften der Herren. Ausgetragen wird sie, wie die UEFA Europa League, unter dem Dach des Europäischen Fußballverbandes UEFA.</p>
       <a href="https://de.wikipedia.org/wiki/UEFA_Champions_League">Mehr Infos</a>
     <p>Logo:</p>
-    <img scr="https://de.wikipedia.org/wiki/UEFA_Champions_League"/>
+    <img src="http://img.uefa.com/imgml/2016/ucl/social/og-default.jpg"/>
   </body>
 </html>
