--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Was ist die Champions League</h2>
     <p>Die UEFA Champions League ist ein Wettbewerb für europäische Fußball-Vereinsmannschaften der Herren. Ausgetragen wird sie, wie die UEFA Europa League, unter dem Dach des Europäischen Fußballverbandes UEFA.</p>
       <a href="https://de.wikipedia.org/wiki/UEFA_Champions_League">Mehr Infos</a>
-    <p>Logo:</p>
+    <p><strong>Logo:</strong></p>
     <img src="http://img.uefa.com/imgml/2016/ucl/social/og-default.jpg" alt="Logo" />
     <h3>Sieger</h3>
   </body>
