--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <a href="https://de.wikipedia.org/wiki/UEFA_Champions_League">Mehr Infos</a>
     <p><strong>Logo:</strong></p>
     <img src="http://img.uefa.com/imgml/2016/ucl/social/og-default.jpg" alt="Logo" />
-    <h3>Sieger</h3>
+    <h3>Sieger:</h3>
   </body>
 </html>
