--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>Was ist die Champions League</h2>
     <p>Die UEFA Champions League ist ein Wettbewerb für europäische Fußball-Vereinsmannschaften der Herren. Ausgetragen wird sie, wie die UEFA Europa League, unter dem Dach des Europäischen Fußballverbandes UEFA.</p>
       <a href="https://de.wikipedia.org/wiki/UEFA_Champions_League">Mehr Infos</a>
-    <p><strong>Logo:</strong></p>
+    <h3><strong>Logo:</strong></h3>
     <img src="http://img.uefa.com/imgml/2016/ucl/social/og-default.jpg" alt="Logo" />
-    <h3>Sieger:</h3>
+    <h4>Sieger:</h4>
   </body>
 </html>
