--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <a href="https://de.wikipedia.org/wiki/UEFA_Champions_League">Mehr Infos</a>
     <h3><strong>Logo:</strong></h3>
     <img src="http://img.uefa.com/imgml/2016/ucl/social/og-default.jpg" alt="Logo" />
-    <h4><srong>Sieger:</strong></h4>
+    <h4><strong>Sieger:</strong></h4>
   </body>
 </html>
