--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h4><strong>Sieger:</strong></h4>
     <table>
       <tr>
+        <td>1.</td>
+        <td>Real Madrid</td>
+        <td>12 Mal</td>
       </tr>
       <tr>
       </tr>
