--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
       <tr>
         <td>1.</td>
         <td>Real Madrid</td>
-        <td>12 Mal</td>
+        <td>12 Siege</td>
+      </tr>
+      <tr>
+        <td>2.</td>
+        <td>AC Mailand</td>
+        <td>7 Siege</td>
+      </tr>
+      <tr>
+        <td>3.</td>
+        <td>FC Bayern München</td>
+        <td>5 Siege</td>
       </tr>
       <tr>
       </tr>
