--- a/about_me.html
+++ b/about_me.html
@@ -7,3 +7,7 @@
   </head>
   <body>
     <h1><strong>About me</strong></h1>
+    <h2><strong>Hobbys:</strong></h2>
+    <p>Fußball</p>
+    <p>Viedeospiele</p>
+    
