--- a/about_me.html
+++ b/about_me.html
@@ -8,6 +8,8 @@
   <body>
     <h1><strong>About me</strong></h1>
     <h2><strong>Hobbys:</strong></h2>
-    <p>Fußball</p>
-    <p>Viedeospiele</p>
+    <ol>
+      <il>Fußball</oil>
+      <il>Zocken</il>
+    </ol>
     
