--- a/about_me.html
+++ b/about_me.html
@@ -9,7 +9,7 @@
     <h1><strong>About me</strong></h1>
     <h2><strong>Hobbys:</strong></h2>
     <ol>
-      <il>Fußball</oil>
-      <il>Zocken</il>
+      <li>Fußball</li>
+      <li>Zocken</li>
     </ol>
     
