--- a/about_me.html
+++ b/about_me.html
@@ -17,6 +17,11 @@
     <p><a href="http://borg.at/home/">Meine Schule</a></p>
     <p><strong>Lieblingsverein: Real Madrid</strong></p>
       <img width="500" src="http://sqwanjia.net/data/out/99/39564930-real-madrid-logo.jpg" alt="Logo"/>
+    <table>
+      <tr>
+        <td>Größe</td>
+        <td>1.83m</td>
+      </tr>  
     
   </body>  
 </html>
