--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,8 @@
       <tr>
         <td>Größe</td>
         <td>-1.83m</td>
-      </tr>  
+      </tr>
+    </table>  
     
   </body>  
 </html>
