--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,7 @@
     </title>
   </head>
   <body>
-    <h1 class="title uppercase">About me</h1>
+    <h1 id="article-title" class="title uppercase">About me</h1>
     <h2><strong>Hobbys:</strong></h2>
     <ol>
       <li>Fußball</li>
